objects/Partner_Agreement__c.object
<CustomObject>
    <description>This is an area to manage overarching Partner Agreements and provide status.  There are not revenue dollars directly associated with these agreements.  Those should be entered as opportunities with products and dollars under the correct account.</description>
    <fields>
        <fullName>Agreement_Type__c</fullName>
        <label>Agreement Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>Master-Sub</fullName>
                </value>
                <value>
                    <fullName>GTM - Influencer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Model_Status__c</fullName>
        <label>Business Model Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Enablement_Status__c</fullName>
        <label>Marketing Enablement Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Account_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The account name for the record.  Automatically populated from the account.</description>
        <inlineHelpText>The account name for the record.  Automatically populated from the account.</inlineHelpText>
        <label>Partner Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Agreements</relationshipLabel>
        <relationshipName>Partner_Agreements</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Agreement_Description__c</fullName>
        <description>Brief summary of the partner agreement.  Limited to 250 characters (2-3 sentences).</description>
        <inlineHelpText>Brief summary of the partner agreement.  Limited to 250 characters (2-3 sentences).</inlineHelpText>
        <label>Partner Agreement Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Agreement_End_Date__c</fullName>
        <description>Date the partner agreement ends.</description>
        <inlineHelpText>Date the partner agreement ends.</inlineHelpText>
        <label>Partner Agreement End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner_Agreement_Stage__c</fullName>
        <description>Where the partner agreement is in its life-cycle.</description>
        <inlineHelpText>Where the partner agreement is in its life-cycle.</inlineHelpText>
        <label>Partner Agreement Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lead (10%)</fullName>
                </value>
                <value>
                    <fullName>Meeting Booked (35%)</fullName>
                </value>
                <value>
                    <fullName>Solution Design (50%)</fullName>
                </value>
                <value>
                    <fullName>Verbal Agreement (75%)</fullName>
                </value>
                <value>
                    <fullName>Legal Review (90%)</fullName>
                </value>
                <value>
                    <fullName>Contract Signed (100%)</fullName>
                </value>
                <value>
                    <fullName>Agreement Lost (0%)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Agreement_Start_Date__c</fullName>
        <description>Day the partner agreement is starting.</description>
        <inlineHelpText>Day the partner agreement is starting.</inlineHelpText>
        <label>Partner Agreement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner_Agreement_Status__c</fullName>
        <description>Latest Status of the partner agreement.  Provides context to other stakeholders about where the deal is in addition to the stage.</description>
        <inlineHelpText>Latest Status of the partner agreement.  Provides context to other stakeholders about where the deal is in addition to the stage.</inlineHelpText>
        <label>Partner Agreement Status</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Agreement_Update_Date__c</fullName>
        <description>Date that an update for the agreement was provided.</description>
        <inlineHelpText>Date that an update for the agreement was provided.</inlineHelpText>
        <label>Partner Agreement Last Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner_Tier__c</fullName>
        <label>Partner Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Enablement_Status__c</fullName>
        <label>Product Enablement Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Projected_Annual_Agreement_Revenue__c</fullName>
        <label>Projected Annual Agreement Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Enablement_Status__c</fullName>
        <label>Sales Enablement Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Services_Enablement_Status__c</fullName>
        <label>Services Enablement Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Model__c</fullName>
        <label>Support Model</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Training_Allowance__c</fullName>
        <label>Training Allowance</label>
        <type>TextArea</type>
    </fields>
    <label>Partner Agreement</label>
    <nameField>
        <label>Partner Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>